# aidrive

./: .clang-format  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  setup.sh
.github/workflows/: ccpp.yml
apps/: CMakeLists.txt  drivestates.hpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  main.cpp
cmake/: CodeCoverage.cmake
include/aidrive/: Profile.hpp  Types.hpp  Utils.hpp
src/: CMakeLists.txt  main.cpp
src/bezier/: bezier.cpp  bezier.h
src/control/: Control.cpp  Control.hpp  Fit.cpp  Fit.hpp
src/distance_following/: DistanceFollowing.cpp  DistanceFollowing.hpp
src/estimator/: RingBuffer.hpp  histogram.cpp  histogram.hpp  holo_histogram.cpp  holo_histogram.hpp
src/model/: Model.cpp  Model.hpp
src/newton/: BandedLDL.h  BumpFunction.h  CMakeLists.txt  DampedOptimizer.h  Frenet.h  MatrixUtil.h  NumericalDerivative.h  README.md  ScalarFunctionWrappers.h  SmoothBarrierFunction.h  TrajectoryOptimizer.cpp  TrajectoryOptimizer.h  main.cpp
src/newton/cost/: ActorAvoidanceCost.h  BumpCost.h  FunctionOfFilterCost.h  LateralCost.h  LimitCosts.h  PriorCost.h  ProgressCost.h  SmoothnessCost.h
src/newton/tests/: ActorAvoidanceCostTest.h  BandedLDLTest.h  BumpFunctionTest.h  DampedOptimizerTest.h  FrenetTest.h  LateralCostTest.h  LimitCostsTest.h  MatrixUtilTest.h  NumericalDerivativeTest.h  PriorCostTest.h  ProgressCostTest.h  ScalarFunctionWrappersTest.h  SmoothBarrierFunctionTest.h  SmoothnessCostTest.h  TestSuite.cpp  TestUtil.h  TrajectoryOptimizerTest.h
src/newton/viz/: DampedOptimizerViz.h  SavePPM.h  SimpleDisp.h  SimpleDraw.h  TrajectoryViz.h
src/planner/: SpeedOpt.cpp  SpeedOpt.hpp
src/render/: Render.cpp  Render.hpp
src/statemachine/: CMakeLists.txt  events.hpp  lib.hpp  machines.hpp  states.hpp
src/unstructure/: CMakeLists.txt  CollisionGrid.cpp  CollisionGrid.hpp  Coord2d.hpp  DStarLite.cpp  DStarLite.hpp  HybridAStar.cpp  HybridAStar.hpp  ReedsShepp.cpp  ReedsShepp.hpp
tests/: CMakeLists.txt  TestCereal.cpp  TestCeres.cpp  TestDemo.cpp  TestFit.cpp  TestGmock.cpp  TestHistogram.cpp  TestModel.cpp  demo.hpp
